# bengal

./: .coverage  .gitignore  .importlinter  .pre-commit-config.yaml  .pre-commit-guide.md  .test_durations  ADMONITIONS_FIXED.md  AGENTS.md  ARCHITECTURE.md  ATOMIC-COMMITS-RULE.md  BIG_O_ANALYSIS.md  BIG_O_COMPLEXITY_SUMMARY.md  BORDER_RADIUS_FIX.md  BORDER_RADIUS_IMPLEMENTATION.md  BORDER_STYLE_PROPOSAL.md  BRANCH_OVERVIEW.md  CHANGELOG.md  CLAUDE.md  COMMIT_GUIDE.md  COMPONENT_UPDATE_PLAN.md  CONTRIBUTING.md  CSS_FILES_NEEDING_MODERNIZATION.md  CSS_FINAL_AUDIT.md  CSS_IMPROVEMENTS_CRITIQUE.md  CSS_MODERNIZATION_PROGRESS.md  DEV_VS_PRODUCTION_ASSETS.md  FINAL_SOLUTION_JINJA2_VARIABLES.md  FINDINGS_FROM_PUBLIC_HTML.md  FLUID_BLOB_EFFECTS.md  GETTING_STARTED.md  GRADIENT_BLOBS_USAGE.md  HONEST_README_UPDATE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INCREMENTAL_BUILD_REFACTOR_SUMMARY.md  INSTALL_FREE_THREADED.md  ISSUE_EMPTY_LINES_IN_TEMPLATES.md  KIDA.md  KIDA_BIG_O_ANALYSIS.md  KIDA_FEEDBACK.md  (+80 more)
.bengal-metrics/: history.jsonl  latest.json
.compeitor/: supabase.css  supabase.html
.dori/: context.json  file_history.json
.github/: CI_IMPROVEMENTS.md  CODEOWNERS  TESTING.md  copilot-instructions.md  pull_request_template.md
architecture/: analysis.md  assets-pipeline.md  autodoc.md  cache.md  cli.md  config.md  content-processing-api.md  content-types.md  data-flow.md  design-principles.md  discovery.md  extension-points.md  file-organization.md  fonts.md  health.md  object-model.md  orchestration.md  overview.md  performance.md  postprocess.md  rendering.md  server.md  testing.md  utils.md
benchmarks/: 348-chrome-memoization-findings.md  AGENTS.md  COHERENCY_PROFILING.md  GITHUB_PAGES_BENCHMARK_GUIDE.md  PROFILE_RENDER_NATIVE.md  README.md  SETUP_GUIDE.md  SUMMARY.md  analyze_github_pages_results.py  baseline_build_overhead.json  bench_build_ab.py  bench_contextvar_config.py  bench_render_tiers.py  benchmark_cross_ssg.py  benchmark_gil_speedup.py  benchmark_history.py  benchmark_hmr_latency.py  benchmark_matrix.toml  benchmark_peak_rss.py  benchmark_render.py  benchmark_warm_build_scaling.py  build_matrix_results.csv  build_matrix_results.json  calibrate_render_isolation.py  calibrate_worker_thresholds.py  compare_hmr_latency.py  conftest.py  directive_cache_benchmark.py  directive_cache_real_site.py  generate_bench_site.py  generate_speedup_report.py  lexer_benchmark.py  memory_profiler.py  probe_render_ceiling.py  profile_build_overhead.py  profile_phases.py  profile_render.py  profile_render_native.py  pytest.ini  render-isolation-case-study.md  (+32 more)
bengal/: __init__.py  __main__.py  cli.py  concurrency.py  directives.py
bengal-syntax-highlighter/: .gitignore  .vscodeignore  AGENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  MAC_QUICK_START.md  QUICK_START.md  README.md  START_HERE.md  language-configuration.json  package.json
changelog.d/: +auto-nav-menu.fixed.md  +default-theme-primitives.changed.md  +editor-code-block-tab-bar.changed.md  +firstparty-graph.changed.md  +firstparty-graph.removed.md  +fix-edit-page-none-url.fixed.md  +free-threading-cli-gate.added.md  +graph-atlas-semantic-zoom.added.md  +graph-dark-labels.fixed.md  +graph-legibility.fixed.md  +graph-pagerank-divergence.fixed.md  +graph-topic-map.added.md  +implicit-editor-code-block-frame.fixed.md  +include-render.fixed.md  +premium-code-block-chrome-fix.fixed.md  +pridelands-phase3-remainder.changed.md  +pridelands-phase3.changed.md  +pridelands-phase4-first-impression.changed.md  +pridelands-premium-code-blocks.changed.md  +prose-link-styling.fixed.md  +reproducible-graph-index-output.fixed.md  +theme-baseurl-links.fixed.md  +theme-dropdown-anchor.fixed.md  +towncrier-bootstrap.added.md  +version-switcher-pill-label.fixed.md  +version-switcher-section-index.fixed.md  +version-switcher.changed.md  284.added.md  292.fixed.md  360.changed.md  363.added.md  376.fixed.md  377.fixed.md  378.fixed.md  379.fixed.md  380.changed.md  381.changed.md  382.removed.md  383.changed.md  384.fixed.md  (+252 more)
config.example/: README.md
content/: _index.md
doc/: conf.py
docs/: BREADCRUMBS.md  CONTENT_TYPES.md  TEMPLATE_FUNCTIONS.md  b-stack-changelog-strategy.md  cache-registry-system.md  kida-render-performance-handoff.md  live-reload-pipeline-review.md  rest-autodoc-visual-qa-checklist.md
example_blended/: module.md.jinja2
example_hugo_style/: macros.md.jinja2  module.md.jinja2
example_templates/: README.md  module_main.md.jinja2
examples/: child-page-tiles-demo.md  cross-reference-demo.md  logging_demo.py
examples/capability-demo/: README.md  pyproject.toml
examples/capability-demo/demo_viz/: __init__.py
examples/capability-demo/sample-site/: bengal.toml
examples/capability-demo/sample-site/content/: demo.md
new-rules/: README.md
patches/: build-directive-from-stash-0.patch
rosettes/: README.md  pyproject.toml
rosettes/rosettes/: __init__.py  _protocol.py  _registry.py
rosettes/rosettes/formatters/: __init__.py  html.py  terminal.py
rosettes/rosettes/lexers/: __init__.py  _base.py  asciidoc.py  awk.py  bash.py  c.py  clojure.py  cpp.py  css.py  cuda.py  cue.py  cypher.py  dart.py  diff.py  dockerfile.py  elixir.py  fish.py  gleam.py  go.py  graphql.py  groovy.py  handlebars.py  haskell.py  hcl.py  html.py  http.py  ini.py  java.py  javascript.py  jinja2.py  json.py  jsonnet.py  julia.py  kotlin.py  latex.py  liquid.py  lua.py  makefile.py  markdown.py  mermaid.py  (+35 more)
rosettes/rosettes/themes/: __init__.py  _css.py  _mapping.py  _palette.py  _roles.py  _terminal.py  _validation.py
rosettes/rosettes/themes/palettes/: __init__.py  bengal.py  catppuccin.py  dracula.py  github.py  monokai.py  nord.py  one_dark.py
rosettes/tests/: __init__.py  test_all_lexers.py  test_formatters.py  test_lexers.py  test_no_gil.py  test_themes.py  test_types.py
rosettes/tests/benchmarks/: __init__.py  bench_vs_pygments.py
rosettes/tests/lexers/: __init__.py  test_common.py  test_config.py  test_javascript.py  test_markup.py  test_python.py  test_systems.py  test_templates.py  test_tree.py
(+7770 files in other folders)
