[project]
name = "rosettes"
version = "0.1.0"
description = "Modern, lock-free syntax highlighter for Python 3.14t free-threading"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "Bengal Core Team" }]
keywords = [
    "syntax-highlighting",
    "code-highlighting",
    "free-threading",
    "nogil",
    "pygments-alternative",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=4.0"]
benchmark = ["pygments>=2.17"]
dev = ["rosettes[test,benchmark]", "mypy>=1.8", "ruff>=0.2"]

[project.urls]
Repository = "https://github.com/bengal/rosettes"
Documentation = "https://bengal.dev/rosettes"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rosettes"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = []

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
